--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  background-color: #f3f4f6;
+  background-color: white;
+  color: #333;
 }
 
 h1,
@@ -16,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family:
-    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+    "Noto Sans", sans-serif;
 }
 
